[package]
name = "ps-bundle-sales"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_with = "1.13.0"
serde_json = "1.0"
shopify_function = "0.2.4"
graphql_client = "0.12.0"

[profile.release]
lto = true
opt-level = 'z'
strip = true
